package data;

public record LoginData(String username, String mail, String password) {}
