package data;

public record RegisterData(String username, String mail, String password) {
}
