package data;

public record TokenData(String username, String encryptedMail, String timestamp) {
}
